2010-01-07  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/RObject.h: added methods "isS4", "slot" 
	and "hasSlot" to deal with S4 objects
	* inst/unitTests/runit.S4.R: unit tests

	* src/Rcpp/ComplexVector.h: new class Rcpp::ComplexVector
	to manage ... complex vectors (CPLXSXP)
	* src/ComplexVector.cpp: implementation
	* inst/unitTests/runit.ComplexVector.R: unit tests

	* src/Rcpp/Promise.h: new class Rcpp::Promise to manage
	promises (PROMSXP). only read access so far (no way to force
	the promise)
	* src/Promise.cpp: implementation

	* src/Rcpp/RObject.h: the result of attr is now an RObject
	rather than a SEXP. This does not change previous behavior
	because of the implicit conversion

	* src/Rcpp/ExpressionVector.h: new class Rcpp::ExpressionVector
	which shares a lot with GenericVector.
	* src/ExpressionVector.cpp: implementation
	* inst/unitTests/runit.ExpressionVector.R: unit tests

	* src/Rcpp/CharacterVector.h: new class Rcpp::CharacterVector
	to manage character vectors (STRSXP). StringVector is a 
	convenience typedef equivalent to CharacterVector
	* src/CharacterVector.cpp: implementation
	* inst/unitTests/runit.CharacterVector.R: unit tests

	* src/Rcpp/WeakReference.h: new class Rcpp::WeakReference
	to wrap WEAKREFSXP with accessors to the key and value
	* src/WeakReference.cpp: implementation

	* src/Rcpp/Rcpp_Rinternals.h: borrowed from Rinternals so that
	we can use VECTOR_PTR (which R forbids unless we define
	USE_RINTERNALS, but defining it disables NO_R_REMAP)

	* src/Rcpp/GenericVector.h : added begin and end to allow
	stl type iteration over generic vectors. Now using the 
	Proxy pattern (from Item 30 of More Effective C++) to 
	allow getting and setting the elements of the list through
	the operator[].

	* int/unitTests/runit.GenericVector.R: examples are reworked
	using [] where set and get were used.

2010-01-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppCommon.h: Protect definition of logTxt by #ifndef